fixed spacing when share buttons stack

--- a/assets/styles/components/_share.scss
+++ b/assets/styles/components/_share.scss
@@ -9,6 +9,7 @@
 .share__button {
   list-style-type: none;
   display:inline-block;
+  margin-bottom: $baseline/8;
 }
 
 .share__logo {
